vue-firebase-app/src/assets/styles/styles.css
/* Background color for top navigation */
.topnav {
    position: relative;
    background-color: rgb(2, 2, 2);
    overflow: hidden;
  }

  /* Style links inside navigation bar */
.topnav li {
    list-style-type:none;
    float: right;
    padding: 10px;
    margin: 0;
    border-radius: 25px;
    background-color: black;    
    font-size: 30px;
    color: rgb(235, 245, 243);
    
  }

  /* Hover Color */
.topnav a:hover {
    background-color: rgb(57, 63, 51);
    color: #f2f2f2;
  }

  /* Color for the active link */
.topnav a.active {
    background-color: #4f6450;
    color: white;
  }

/* spacing for UI */
#p {
  word-spacing: 5em;
}

 /* Hover Color */
tr:hover {
  background-color: #ddd;
}

 /* Save Button */
 .save {
  font-size: 1.0em;
  font-family: Glacial Indifference;
  background-color: #0000FF;
}

 /* Edit Button */
.edit {
  font-size: 1.0em;
  font-family: Glacial Indifference;
  background-color: greenyellow;
}

 /* Delete Button */
.delete {
  font-size: 1.0em;
  font-family: Glacial Indifference;
  background-color: #f44336;
}

 /* Submit Button */
 button.submit {
  font-size: 1.1em;
  font-family: Glacial Indifference;
  background-color: #0000FF;
}

 /* Card Header */
div.card-header {
    text-align: center;
    font-size: 1.5em;
    font-family: Glacial Indifference;
}

 /* Form Group */
div.form-group{
  font-size: 1.1em;
  font-family: Glacial Indifference;
  justify-content: center;
}

/* Form */
form {
  margin-left: 25%;
  margin-right:25%;
  width: 50%;
}

 /* Table Info Format */
.container-layout {
  position:fixed;
  left:200px;
  width:90%;
  justify-content: center;
}

.scrollcontainer {
  font-family: Glacial Indifference;
  min-width: 1000px;
  max-width: 2000px;
  margin-left: 685px;
  margin-right: 685px;
  margin: 0 auto;
}

 /* Project Table Head Format */
 .project-head {
  font-size: 1.1em;
  font-family: Glacial Indifference;
}

 /* Project Table Body Format */
 .project-body {
  font-size: 1.1em;
  font-family: Glacial Indifference;
}

 /* Column Format */
.col-md-10 {
  padding: 0 !important;
  font-family: Glacial Indifference;
  margin-left: 140px;
  margin-right: 140px;
}

/* Margin Radio Button */
.radioButton {
  margin-right: 10px;
}

/* Place all buttons on same line */
div button{
  display:inline-block;
}

/* Header */
h4 {
  text-align: center;
}


th {
  padding-top: 12px;
  text-align: center;
  padding-bottom: 12px;
  background-color: #f2f2f2;
  color: black;
}

/* Data Cell */
td {
  text-align: center;
  padding: 10px;
}

/* Table */
table {
  padding: 12px;
  width: 100%;
  border: 1px solid #ddd;
}

/* Button */
button {
  margin: 0 auto;
}

/* Paganation container */
.paginationContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Modal */
.modal-mask {
  position: fixed;
  z-index: 9998;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: table;
  transition: opacity 0.3s ease;
}

.modal-wrapper {
  display: table-cell;
  vertical-align: middle;
}

.modal-container {
  width: 600px;
  margin: 0px auto;
  padding: 20px 30px;
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
  transition: all 0.3s ease;
  font-family: Glacial Indifference;
}

.modal-header h3 {
  margin-top: 0;
  color: #42b983;
}

.modal-body {
  margin: 20px 0;
}

.modal-default-button {
  display: block;
  margin-top: 1rem;
}

.modal-enter {
  opacity: 0;
}

.modal-leave-active {
  opacity: 0;
}

.modal-enter .modal-container,
.modal-leave-active .modal-container {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

/* Save Button */
.save { background-color: #4CAF50;} /* Green */

/* Cancel Button */
.cancel {background-color: #e7e7e7; color: black;} /* Gray */

